# efl

./: .gitattributes  .gitignore  .travis.yml  Makefile.am  build.bat  configure.ac  configure.bat  configure.py  ensure-vcvars64.bat  examples_checks.py  fnmatch.c  fnmatch_test.c  generate_build.py  install.bat  meson.build  meson_options.txt  native-file-windows.txt  send.sh  test.bat  test.sh
.ci/: ci-build-test.sh  ci-configure.sh  ci-make-check.sh
.github/workflows/: windows-test.yml  windows.yml
data/elementary/edje_externals/: meson.build
data/elementary/objects/: meson.build
data/elementary/themes/: meson.build
data/ethumb/frames/: meson.build
eo2test/: Makefile  eo2-bench.c  eo2_inherit.c  eo2_simple.c  eo3_big.h  eo3_composite.h  eo3_container.c  eo3_container.h  eo3_inherit.c  eo3_inherit.h  eo3_inherit_interface.c  eo3_inherit_interface.h  eo3_interface.c  eo3_interface.h  eo3_mixin_inherit.c  eo3_mixin_inherit.h  eo3_mixin_mixin.c  eo3_mixin_mixin.h  eo3_no_instant.c  eo3_no_instant.h  eo3_simple.c  eo3_simple.h  eo3_test.sh  make.sh  simplesignal.cc
eo2test/cxx/: container1.cpp  eo3_container.hpp  eo3_inherit.hpp  eo3_inherit_interface.hpp  eo3_interface.hpp  eo3_mixin_inherit.hpp  eo3_simple.hpp  eo_base.hpp  eo_callback.hpp  eo_init.hpp  eo_private.hpp  eo_wref.hpp  inherit.hpp  inherit_pp_cons.ipp  inherit_pp_constructor.hpp  inherit_pp_opdesc.ipp  inherit_pp_operation_description.hpp  mixin2.cpp  simple1.cpp  simple2.cpp  simple3.cpp  simple4.cpp  simple5.cpp  simple6.cpp
eo2test/cxx/doc/: Doxyfile  Makefile  efl_cxx_eo.dox  efl_cxx_eo_generated.dox  efl_cxx_eo_samples.dox  efl_cxx_generated.dox  efl_cxx_main.dox  efl_cxx_samples.dox  efl_cxx_tutorials.dox
eo2test/cxx/samples/: mixin1.cpp  simple1.cpp  simple2.cpp  simple3.cpp  simple4.cpp  simple5.cpp  simple6.cpp  simple7.cpp
exactness_test/: run_play.bat  run_record.bat  tests.txt
exactness_test/recordings/: evas-text-win.exu  evas-text.exu
header_checks/: meson.build
pc/: emodel.pc.in
pkgbuild/: PKGBUILD
po/: POTFILES.in
src/: Makefile.am  Makefile_Ecxx.am  Makefile_Eina_Cxx.am  Makefile_Eio.am  Makefile_Emodel.am  Makefile_Eo.am
src/benchmarks/eina/: Ecore_Data.h  city.h  ecore_hash.c  eina_bench.c  eina_bench_array.c  eina_bench_convert.c  eina_bench_crc_hash.c  eina_bench_hash.c  eina_bench_stringshare.c  eina_bench_stringshare_e17.c  evas_stringshare.c
src/benchmarks/eo/: eo_bench.c
src/benchmarks/evas/: evas_bench.c  evas_bench_saver.c
src/bindings/cxx/: meson.build
src/bindings/eina_cxx/: eina_list.hh  eina_ptrlist.hh
src/bindings/mono/: efl_sharp.csproj.in  meson.build
src/bindings/mono/eo_mono/: EoWrapper.cs  FunctionWrapper.cs  FunctionWrapper_Windows.cs  NativeModule_Unix.cs  NativeModule_Windows.cs  meson.build  workaround.cs
src/edje_external/: meson.build
src/edje_external/elementary/: meson.build  modules.inc
src/examples/ecore/: Makefile.am  ecore_audio_custom.c  ecore_audio_playback.c  ecore_audio_to_ogg.c  ecore_buffer_consumer_example.c  ecore_buffer_example.c  ecore_buffer_provider_example.c  ecore_client_bench.c  ecore_compose_get_example.c  ecore_con_client_example.c  ecore_con_client_simple_example.c  ecore_con_eet_client_example.c  ecore_con_eet_server_example.c  ecore_con_lookup_example.c  ecore_con_server_example.c  ecore_con_server_http_example.c  ecore_con_server_simple_example.c  ecore_con_url_cookies_example.c  ecore_con_url_download_example.c  ecore_con_url_ftp_example.c  ecore_con_url_headers_example.c  ecore_evas_basics_example.c  ecore_evas_buffer_example_01.c  ecore_evas_buffer_example_02.c  ecore_evas_ews_example.c  ecore_evas_extn_plug_example.c  ecore_evas_extn_socket_example.c  ecore_evas_vnc_example.c  ecore_evas_wayland_multiseat_example.c  ecore_event_example_02.c  ecore_exe_example.c  ecore_exe_example_child.c  ecore_fd_handler_example.c  ecore_fd_handler_gnutls_example.c  ecore_file_download_example.c  ecore_idler_example.c  ecore_imf_example.c  ecore_job_example.c  ecore_pipe_simple_example.c  ecore_poller_example.c  (+6 more)
src/examples/ecore_avahi/: ecore_avahi_browse_example.c  ecore_avahi_example.c
src/examples/edje/: animations2.c  edje-box2.c  (+6 more)
src/examples/emodel/: Makefile.am  Makefile.examples  emodel_file_example.c
src/lib/efl/: Efl.h  Efl_MVVM_Common.h  efl_api.h  efl_gfx_error.c  efl_gfx_error.h  efl_main.c  meson.build
src/lib/efl/interfaces/: efl_file.c  efl_interfaces_main.c  efl_mvvm_common.c  efl_observer.c  efl_text_style.eo  efl_text_style_base.eo  efl_text_style_non_vg.eo  meson.build
src/lib/efl/interfaces/non-vg/: efl_text_style.eo  meson.build
src/lib/efl/interfaces/vg/: efl_text_style.eo  meson.build
src/lib/eina/check/: check.h  check_stdint.h  meson.build
src/lib/evil/unposix/: .clang-format  cdefs.h  define_lean_and_mean.h  dlfcn.h  fcntl.h  fnmatch.c  fnmatch.h  fnmatch_test.c  getopt.c  getopt.h  libgen.h  limits.h  locale.c  locale.h  meson.build  pthread.h  require_lean_and_mean.h  stdio.c  stdio.h  stdlib.h  string.h  strings.c  strings.h  test.sh  undefine_lean_and_mean.h  unistd.c  unistd.h  unposix_api.h
src/lib/evil/unposix/sys/: meson.build  stat.h  time.c  time.h  types.h
src/modules/elementary/: meson.build
src/modules/elementary/access_output/: mod.c
src/modules/elementary/prefs/: elm_entry.c  meson.build
src/modules/elementary/test_entry/: meson.build
src/modules/elementary/web/none/: elm_web_none_eo.h  meson.build
src/tests/: efl_check.h  timeout.c
src/tests/evil/: evil_fnmatch_test.c  evil_fnmatch_test.sh  evil_suite.c  evil_test_dirname.c  evil_test_dlfcn.c  evil_test_libgen.c  evil_test_stdio.c  evil_test_stdlib.c  evil_test_unistd.c  meson.build
src/tests/evil/unposix/: eina_fnmatch_test.c  eina_vasprintf_test.c  eina_vasprintf_test.sh  evil_unposix_test_getopt.c  run_test.sh  test.sh  test_evil_unposix_strings.c  vasprintf_test.c  vasprintf_test.sh  win_test.sh
subprojects/: check.wrap  jpeg.wrap  libjpeg.wrap  libpng.wrap  lua.wrap  luajit.wrap
win32-deps/: meson.build  packages.config
win32/efl-deps/: deps.sln  deps.vcxproj  packages.config
(+2949 files in other folders)
