if sys_windows

  # Libjpeg-Turbo
  jpeg = declare_dependency(
    link_args: ['-ljpeg', '-L' + meson.current_source_dir() + '\\libjpeg.9.2.0.1\\build\\native\\lib\\v140\\x64\\Release\\dynamic\\cdecl'],
    include_directories: include_directories('libjpeg.9.2.0.1/build/native/include')
  )

endif

